SyntaxGuide.txt
Rules
–––––
-   only one command is allowed per line
-   commands are not case sensitive
-   commands may take multiple arguments separated by commas

Commands
––––––––
1.  make:   Creates a new timer for every name given as argument.
    ex:     "make timerName" or "make timerName1, timerName2, etc"  
2.  delete: Deletes any timer given as argument. If no arguments are provided, deletes all timers.
    ex:     "delete timerName" or "delete"
3.  start:  Starts any timer given as argument. If no arguments are provided, starts all timers.
    ex:     "start timerName" or "start"
4.  stop:   Stops any timer given as argument. If no arguments are provided, stops all timers.
    ex:     "stop timerName" or "stop"
5.  reset:  Resets any timer given as argument. If no arguments are provided, resets all timers.
    ex:     "reset timerName" or "reset"
6.  show:   Show all timers. Takes no arguments.
    ex:     "show"
7.  quit:   Saves timers and their status, then quits. Takes no arguments
    ex:     "quit"
8.  log:    Adds the given time to the timer. Time must be given in HH:MM:SS format or seconds will be assumed.
            Takes the timer name after the time, separated by a space.
    ex:     "log 3:12:38 timerName" or "log 120 timerName"
9   set:    Changes a timer time according to the time given. Time must be given in HH:MM:SS format or seconds will be assumed.
            Takes the timer name after the time, separated by a space.
    ex:     "set 3:12:38 timerName" or "set 120 timerName"
